fix textbox height overflow

--- a/src/app/comment/comment.component.css
+++ b/src/app/comment/comment.component.css
@@ -236,10 +236,32 @@
   background-color: #F0F0F0;
   border-radius: 10px;
   padding: 5px 10px;
+  margin-bottom: 5px;
+}
+
+.la-file-pdf {
+  font-size: 4rem;
+  color: red;
+  align-self: stretch;
+}
+
+.file-meta__info {
+  margin-left: 10px;
+}
+
+.file-meta__info .name {
+  margin: 3px 0;
+  font-size: 1.4rem;
+  font-weight: bold;
+}
+
+.file-meta__info .extension {
+  font-size: 1.2rem;
+  color: #d5d5d5;
 }
 
 .message-box {
-  flex-basis: 85%;
+  width: 87%;
   border: 2px solid #e8ecf5;
   border-radius: 30px;
   padding: 10px 30px;
@@ -266,19 +288,29 @@
 
 .attach {
   position: absolute;
-  bottom: 22%;
-  right: 18%;
+  bottom: 21%;
+  right: 16%;
   font-size: 2rem;
   color: #696969;
 }
 
 .send-btn {
-  margin-left: 13px;
+  position: absolute;
+  bottom: 1.2%;
+  right: 4%;
   border-radius: 50%;
   background-color: #1a79f9;
   border: none;
   color: var(--white);
   width: 3.9rem;
   height: 3.9rem;
+  padding-top: 2.5px;
   font-size: 2.4rem;
+}
+
+.send-btn.attachments {
+  background-color: var(--white);
+  color: #8E8E8E;
+  transform: scale(1.2);
+  bottom: 1.75%;
 }
